<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background= "#FFFFFF"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/logo_of_the_company"
                android:src="@drawable/customer" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="48sp"
                android:text="@string/dashboard"
                android:fontFamily="sans-serif-black"
                android:textColor="#0086db" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/todays_status_is"
                android:textSize = "24sp"
                android:fontFamily="sans-serif"
                android:textColor="#1e92dc"
                android:layout_alignParentBottom="true"/>

            <TextView
                android:id="@+id/textViewTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:fontFamily="sans-serif"
                android:gravity="right"
                android:text="@string/_17_20"
                android:textSize="32sp">

            </TextView>

            
        </RelativeLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnOrderPreserved="false"
            android:alignmentMode="alignMargins"
            android:columnCount="3"
            android:rowCount="2">

            <androidx.cardview.widget.CardView
                android:layout_width="10dp"
                android:layout_height="160dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:elevation="10dp"
                app:cardCornerRadius="8dp"
                android:layout_margin="12dp"
                android:layout_marginTop="40dp"
                >
                     <LinearLayout
                         android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="16dp"
                         android:background="#0086db">

                         <Button
                             android:id="@+id/buttonTemp"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:text="TEMPERATURE"
                             android:textSize="20sp">

                         </Button>


                     </LinearLayout>
                </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:elevation="10dp"
                app:cardCornerRadius="10dp"
                android:layout_margin="12dp"
                android:layout_marginTop="40dp"
                >
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="16dp"
                    android:background="#0086db">

                    <Button
                        android:id="@+id/buttonHumidity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="HUMIDITY"
                        android:textSize="20sp" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:elevation="10dp"
                app:cardCornerRadius="10dp"
                android:layout_margin="12dp"
                android:layout_marginTop="40dp"
                >
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="16dp"
                    android:background="#0086db">

                    <Button
                        android:id="@+id/buttonCO2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="CO2"
                        android:textSize="20sp">

                    </Button>


                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="10dp"
                android:layout_height="160dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:elevation="10dp"
                app:cardCornerRadius="8dp"
                android:layout_margin="12dp"
                android:layout_marginTop="20dp"
                >
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="16dp"
                    android:background="#0086db">

                    <Button
                        android:id="@+id/buttonTVOC"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/tvoc"
                        android:textSize="20sp">

                    </Button>


                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:elevation="10dp"
                app:cardCornerRadius="10dp"
                android:layout_margin="12dp"
                android:layout_marginTop="20dp"
                >
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="16dp"
                    android:background="#0086db">

                    <Button
                        android:id="@+id/buttonPM10"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="PM10"
                        android:textSize="20sp">

                    </Button>


                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:elevation="10dp"
                app:cardCornerRadius="10dp"
                android:layout_margin="12dp"
                android:layout_marginTop="20dp"
                >
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="16dp"
                    android:background="#0086db">

                    <Button
                        android:id="@+id/buttonPM25"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/pm2_5"
                        android:textSize="20sp">

                    </Button>


                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </GridLayout>


        
    </LinearLayout>



</ScrollView>